--- a/css/styles.css
+++ b/css/styles.css
@@ -16,4 +16,11 @@
 body {
   margin: 0px;
   padding: 0px;
+  background-color:cadetblue;
+}
+
+footer {
+  background-color: blue;
+  color: red;
+  text-align: center;
 }
